# quack

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  test_symmetric_gemm.py
.github/: actionlint.yaml
.github/actions/gpu-test/: action.yml
.github/workflows/: _test.yml  ci-pr.yml  ci.yml  publish.yaml
AI/: caching_and_parallel_compilation.md  clc_spurious_invalid_investigation.md  gather_a_2cta_cluster_fence_soundness.md  global_memory_coalescing_notes.md  gpu_pipe_microbench_notes.md  hadamard_roofline_analysis.md  mlp_activation_checkpointing.md  parallel_compilation_autotuning.md  ragged_tma_ptr_shift_finding.md  register_spilling_sm100.md  repro_clc_grant_monotonicity.py  repro_clc_spurious_invalid.py  repro_tma_load_fail.py  repro_tma_load_ok.py  repro_tma_store_ok.py  sm120_hardware.md  tvm_ffi_compilation.md  varlen_blockscaled_sf_layout.md
benchmarks/: benchmark_cross_entropy.py  benchmark_gemm.py  benchmark_gemm_autotuned.py  benchmark_gemm_epilogues.py  benchmark_gemm_sm90.py  benchmark_gemm_symmetric.py  benchmark_hadamard.py  benchmark_layernorm.py  benchmark_rmsnorm.py  benchmark_sm120_cluster.py  benchmark_softmax.py  benchmark_topk.py  sm120_cluster_benchmark.md
docs/: jax.md  sm120_ncu_profiling.md
examples/: example_gemm_trace.py  example_iket_trace.py  example_trace.py
media/: 2025-07-10-membound-sol.md
microbenchmarks/: global_memory_coalescing.py  gpu_pipe_microbench.cu  gpu_pipe_microbench.py
quack/: __init__.py  _compile_worker.py  activation.py  autotuner.py  blockscaled_gemm_utils.py  broadcast_utils.py  cache_utils.py  copy_utils.py  cross_entropy.py  cute_dsl_utils.py  dense_gemm_sm90.py  epi_composable.py  epi_ops.py  epi_utils.py  epilogues.py  fast_math.py  gemm.py  gemm_act.py  gemm_act_sm90.py  gemm_base.py  gemm_blockscaled_interface.py  gemm_config.py  gemm_dact.py  gemm_dact_sm90.py  gemm_default_epi.py  gemm_epilogue.py  gemm_host.py  gemm_interface.py  gemm_norm_act.py  gemm_sm100.py  gemm_sm120.py  gemm_sm80.py  gemm_sm90.py  gemm_sq_reduce.py  gemm_symmetric.py  gemm_tvm_ffi_utils.py  gemm_wrapper_utils.py  hadamard.py  jack_utils.py  layer_norm_fn.py  (+32 more)
quack/bench/: bench_utils.py
quack/blockscaled/: __init__.py  quantize.py  utils.py
quack/cache/: __init__.py  _pool_preload.py  async_compile.py  compile_only.py  jit.py
quack/dsl/: __init__.py  cute_dsl_shim.py  cute_tensor.py  torch_library_op.py
quack/epilogue/: __init__.py  head_rmsnorm.py  rotary.py
quack/sort/: bitonic_sort.py
quack/spec/: mma.py  smem.py  tensor_spec.py  tma.py  tmem.py
quack/sync/: __init__.py  barrier.py
quack/testing/: fake_compat.py  pytest_plugin.py
quack/transform/: __init__.py  hadamard.py
scripts/: mlp_checkpoint_bench.py
tests/: conftest.py  test_async_compile.py  test_autotuner.py  test_blockscaled_quantize.py  test_cache.py  test_complex.py  test_cross_entropy.py  test_cute_dsl_shim.py  test_epi_ops.py  test_fast_math.py  test_gemm_256x512.py  test_gemm_blockscaled_interface.py  test_gemm_epilogue.py  test_gemm_sm100_blockscaled.py  test_gemm_split_k.py  test_gemm_symmetric.py  test_hadamard.py  test_layernorm.py  test_linear.py  test_linear_varlen_k.py  test_linear_varlen_m.py  test_mlp.py  test_namedtuple_constexpr.py  test_namedtuple_tvm_ffi.py  test_rmsnorm.py  test_rotary.py  test_softmax.py  test_softmax_jax.py  test_symmetric_dense_gemm_sm90.py  test_topk.py  test_torch_library_op.py  test_trace.py
tests/dsl/: test_cute_tensor.py  test_cute_tensor_indexing.py
tests/transform/: test_hadamard.py
tools/: dump_sass.py
tools/ci/: README.md
tools/ci/docker/: Dockerfile  build.sh  tag_and_push.sh
tools/cute_dsl_shim/: DESIGN.md  Makefile  README.md  cute_dsl_shim.c  verify.py
tools/cute_dsl_shim/recon/: README.md  find_libnvvm_table.py  find_ptxas_entries.py
tools/dev/docker/: Dockerfile
