[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quack-kernels"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "nvidia-cutlass-dsl>=4.5.1",
    "torch",
    "apache-tvm-ffi>=0.1.6,<0.2",
    "torch-c-dlpack-ext",
    "einops",
]

[project.optional-dependencies]
cu13 = ["nvidia-cutlass-dsl[cu13]>=4.5.1"]
heuristics = ["nvidia-matmul-heuristics"]
jax = ["jax", "jax-tvm-ffi"]
dev = [
    "pre-commit",
    "pytest",
    "pytest-xdist",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quack*"]

[tool.setuptools.dynamic]
version = {attr = "quack.__version__"}

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "extra == 'cu13'" },
]

[tool.pytest.ini_options]
# Filters set via warnings.filterwarnings() in conftest.py don't survive pytest's
# per-test catch_warnings context — pytest prepends its own ('always', Warning)
# filter, which then matches before any conftest 'ignore'. Filters declared here
# are installed by pytest *after* its 'always', so they actually win.
#
# torch.compile / Inductor scripts dynamically-created methods via the
# deprecated torch.jit.script_method during tracing, firing 300+ deprecation
# warnings per --compile-only run. Suppress at the source module.
filterwarnings = [
    "ignore:`torch\\.jit\\.script_method`.*Please switch to `torch\\.compile` or `torch\\.export`\\.:DeprecationWarning:torch\\.jit\\._script",
]

[tool.ruff]
line-length = 100
exclude = [".#*"]

[tool.ruff.lint]
extend-select = ["B904"]
ignore = [
    "E731",  # do not assign a lambda expression, use a def
    "E741",  # Do not use variables named 'I', 'O', or 'l'
    "F841",  # local variable is assigned to but never used
]
